[package]
name = "cshannon"
version = "0.1.0"
authors = ["Prathmesh Prabhu <callprpaths@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
bit-vec = "0.6.1"
clap = "2.33.0"
env_logger = "0.7.1"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_info"] }
owning_ref = "0.4.1"
tempfile = "3.1.0"
test_bin = "0.3.0"
unicode-segmentation = "1.6.0"