# Copyright 2020 Prathmesh Prabhu
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cshannon"
version = "0.1.1"
authors = ["Prathmesh Prabhu <callpraths@gmail.com>"]
edition = "2018"
description = "An implementation of compression algorithms leading up to Huffman's encoding"
documentation = "https://docs.rs/cshannon"
readme = "README.md"
repository = "https://github.com/callpraths/cshannon"
license-file = "LICENSE"
keywords = ["compression", "decompression", "shannon", "fano"]
categories = ["compression"]

[dependencies]
anyhow = "1.0.28"
bit-vec = "0.6.1"
clap = "2.33.0"
env_logger = "0.7.1"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_info"] }
owning_ref = "0.4.1"
tempfile = "3.1.0"
test_bin = "0.3.0"
unicode-segmentation = "1.6.0"
