# Copyright 2020 Prathmesh Prabhu
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cshannon"
version = "0.2.1"
authors = ["Prathmesh Prabhu <callpraths@gmail.com>"]
edition = "2018"
description = "An implementation of compression algorithms leading up to Huffman's encoding"
documentation = "https://docs.rs/cshannon"
readme = "README.md"
repository = "https://github.com/callpraths/cshannon"
license = "MIT OR Apache-2.0"
keywords = ["compression", "decompression", "shannon", "fano", "pet-project"]
categories = ["compression", "command-line-utilities", "algorithms"]

[features]
cli = ["clap", "env_logger"]

[dependencies]
anyhow = "1.0.100"
bit-vec = "0.8.0"
clap = { version = "4.5.51", features = ["derive"], optional = true }
env_logger = { version = "0.11.8", optional = true }
log = { version = "0.4.28", features = ["max_level_trace", "release_max_level_info"] }
owning_ref = "0.4.1"
serde = { version = "1.0.228", optional = true, features = ["derive"] }
tempfile = "3.23.0"
test_bin = "0.5.0"
unicode-segmentation = "1.12.0"

[[bin]]
name = "cshannon"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "minbin"
path = "src/bin/minbin.rs"

[dev-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
criterion = "0.7.0"
env_logger = "0.11.8"

[lib]
bench = false

[[bench]]
name = "roundtrip"
harness = false
